--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -15,6 +15,8 @@
     <Compile Remove="Data\Migrations\20200419162242_ApplyAnnotationsToCustomerName.Designer.cs" />
     <Compile Remove="Data\Migrations\20200419162752_AddCustomersDb.cs" />
     <Compile Remove="Data\Migrations\20200419162752_AddCustomersDb.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200420131742_AddBirthdayColumnToCustomersDb.cs" />
+    <Compile Remove="Data\Migrations\20200420131742_AddBirthdayColumnToCustomersDb.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
