--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -23,11 +23,14 @@
     <Compile Remove="Data\Migrations\20200420143915_AddGenresDb.Designer.cs" />
     <Compile Remove="Data\Migrations\20200420144606_EgnreDb.cs" />
     <Compile Remove="Data\Migrations\20200420144606_EgnreDb.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200505141918_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Remove="Data\Migrations\20200505141918_AddDrivingLicenseToApplicationUser.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
@@ -35,6 +38,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="StackifyMiddleware" Version="3.0.5.2" />
   </ItemGroup>
 
 </Project>
